# solo-node

./: Cargo.toml  README.md
frame/esbind/: Cargo.toml
frame/esbind/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
frame/evm/precompile/call-vm/: Cargo.toml
frame/evm/precompile/call-vm/src/: lib.rs
frame/rgrandpa/: Cargo.toml
frame/rgrandpa/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
frame/vm-bridge/: Cargo.toml
frame/vm-bridge/src/: lib.rs  tests.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: common.rs  constants.rs  lib.rs
script/: build.sh  cycan_builder.Dockerfile
