[package]
name = "frontier-template-runtime"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frontier/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { version = "3.0.0-dev", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

pallet-evm = {version = "5.0.0", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }
pallet-ethereum = {version = "3.0.0", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }
pallet-dynamic-fee = {version = "3.0.0", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }

pallet-evm-precompile-simple = {version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }
pallet-evm-precompile-sha3fips = {version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }
pallet-evm-precompile-modexp = {version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }

pallet-babe = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-babe = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier"  }
pallet-authorship = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-im-online = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-offences = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" } 

pallet-balances = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-grandpa = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-randomness-collective-flip = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-sudo = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-timestamp = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

sp-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-core = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-io = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-offchain = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-session = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-transaction-pool = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-version = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

fp-rpc = {version = "2.1.0", default-features = false, git = "https://github.com/paritytech/frontier.git", rev = "61bdbb3" }

pallet-contracts = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
pallet-contracts-primitives = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
log = { version = "0.4.14", default-features = false }
pallet-evm-precompile-call-vm = {default-features = false, version = '0.1.0', path = "../frame/evm/precompile/call-vm"}
pallet-vm-bridge = {default-features = false, version = '0.1.0', path = "../frame/vm-bridge"}

pallet-session = { features = ["historical"], default-features = false , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
pallet-staking = { default-features = false , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
pallet-staking-reward-curve = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-staking = { default-features = false , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
frame-election-provider-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-election-provider-multi-phase = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "frontier", optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "frontier", optional = true }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "frontier", optional = true }
pallet-rgrandpa = { default-features = false, path = '../frame/rgrandpa', version = '3.0.0' }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std", "babe"]
babe = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-authorship/std",
	"pallet-im-online/std",
	"pallet-offences/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	'pallet-contracts-rpc-runtime-api/std',
	'pallet-vm-bridge/std',
	'pallet-evm-precompile-call-vm/std',
	'pallet-session/std',
	'pallet-staking/std',
	'sp-staking/std',
	"frame-election-provider-support/std",
	'pallet-rgrandpa/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	'pallet-rgrandpa/runtime-benchmarks',
]
