[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-rgrandpa'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
frame-support = { default-features = false, version = '3.0.0',git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
log = { version = "0.4.14", default-features = false }
pallet-session = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-runtime = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-staking = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier"}
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
serde = { version = "1.0.101", optional = true }
pallet-babe = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-grandpa = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { default-features = false, version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { default-features = false, version = '3.0.0' , git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	"log/std",
	'pallet-session/std',
	'sp-runtime/std',
	'sp-core/std',
	'pallet-staking/std',
	"sp-application-crypto/std",
	"serde",
	"pallet-babe/std",
	'sp-io/std',
	'pallet-grandpa/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
